--- a/assignment33_jobs/test/fixtures/jobs.yml
+++ b/assignment33_jobs/test/fixtures/jobs.yml
@@ -1,3 +1,20 @@
+# == Schema Information
+#
+# Table name: jobs
+#
+#  id          :integer          not null, primary key
+#  company     :string
+#  location    :string
+#  title       :string
+#  description :text
+#  duties      :text
+#  experience  :text
+#  education   :text
+#  posted      :date
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
