--- a/movie_query/Gemfile
+++ b/movie_query/Gemfile
@@ -30,6 +30,14 @@ gem 'pg'
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
+# User the 'thin' server instead of the default webrick
+ gem 'thin'
+
+ # Use postgres and the Heroku rails gem for Heroku
+ group :production do
+   gem 'rails_12factor'
+ end
+ 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug'
